<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.dragfoundation.screenart.Terms">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc1"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc2"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc3"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc4"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc5"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc6"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc7"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tc8"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="#E5097F"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="Changes to This Terms and Conditions"/>

        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ctc"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="#E5097F"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="Contact Us"/>
        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ccontact"
            android:textStyle="normal"
            android:textSize="16dp"
            android:gravity="fill"/>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Screen Art"/>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="P-32, Vijay Vihar, Uttam Nagar"/>
        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Delhi-110059"/>
        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="India"/>

        <TextView
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact : surajjain.art@gmail.com"/>

    </LinearLayout>

</ScrollView>
